--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@ h1{
     color: rgb(32, 32, 167);
     text-align: center;
     font-size: x-large;
+    font: bold;
 }
 p{
     color: blueviolet;
     font-family: Arial, Helvetica, sans-serif;
+
 }
 /*
 Author: Md Shaidul Islam
